{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 15,
  "lineage": "5976d80c-6f11-412a-2b80-151d18b96f22",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "lab25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00beae93a2d981137",
            "arn": "arn:aws:ec2:us-east-1:851725650600:instance/i-0330199d900273e62",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0330199d900273e62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0496b9caa9725bc85",
            "private_dns": "ip-10-0-1-38.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.38",
            "public_ip": "34.229.218.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d9fda2781fece2f6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-083fda3b197d92fcc",
            "tags": {
              "Name": "lab Server"
            },
            "tags_all": {
              "Name": "lab Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cf94e5fbfb3ef9f7"
            ]
          },
          "dependencies": [
            "module.vpc.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.lab25",
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:internet-gateway/igw-01c1476a4988cb6d4",
            "id": "igw-01c1476a4988cb6d4",
            "owner_id": "851725650600",
            "tags": {
              "Name": "lab25"
            },
            "tags_all": {
              "Name": "lab25"
            },
            "vpc_id": "vpc-022c199f0fdae90e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:route-table/rtb-05867717f05f36c78",
            "id": "rtb-05867717f05f36c78",
            "owner_id": "851725650600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c1476a4988cb6d4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "lab25"
            },
            "tags_all": {
              "Name": "lab25"
            },
            "timeouts": null,
            "vpc_id": "vpc-022c199f0fdae90e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab25",
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab210bdfdaff50de",
            "route_table_id": "rtb-05867717f05f36c78",
            "subnet_id": "subnet-083fda3b197d92fcc"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.lab25",
            "module.vpc.aws_route_table.lab25",
            "module.vpc.aws_subnet.lab25",
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:security-group/sg-0cf94e5fbfb3ef9f7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf94e5fbfb3ef9f7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240529210516411700000002",
            "name_prefix": "terraform-",
            "owner_id": "851725650600",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022c199f0fdae90e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:security-group/sg-0406c52d6a4fbddd6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0406c52d6a4fbddd6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "terraform-20240529210516411700000001",
            "name_prefix": "terraform-",
            "owner_id": "851725650600",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-022c199f0fdae90e9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:subnet/subnet-083fda3b197d92fcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083fda3b197d92fcc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851725650600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab25"
            },
            "tags_all": {
              "Name": "lab25"
            },
            "vpc_id": "vpc-022c199f0fdae90e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab25p",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:subnet/subnet-0e17aee4a2c383bff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e17aee4a2c383bff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725650600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab25p-10.0.2.0/24"
            },
            "tags_all": {
              "Name": "lab25p-10.0.2.0/24"
            },
            "vpc_id": "vpc-022c199f0fdae90e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab25"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:subnet/subnet-0785a798c55d1662f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0785a798c55d1662f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "851725650600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab25p-10.0.3.0/24"
            },
            "tags_all": {
              "Name": "lab25p-10.0.3.0/24"
            },
            "vpc_id": "vpc-022c199f0fdae90e9"
          },
          "dependencies": [
            "module.vpc.aws_vpc.lab25"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab25",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851725650600:vpc/vpc-022c199f0fdae90e9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002511d24a7908659",
            "default_route_table_id": "rtb-0d443912634ca5774",
            "default_security_group_id": "sg-07fbab6a4264cd9a0",
            "dhcp_options_id": "dopt-08113aee12e39cac5",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-022c199f0fdae90e9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d443912634ca5774",
            "owner_id": "851725650600",
            "tags": {
              "name": "lab25"
            },
            "tags_all": {
              "name": "lab25"
            }
          }
        }
      ]
    }
  ]
}